ci: Printed commit url

--- a/.github/workflows/openvidu-components-angular-E2E.yml
+++ b/.github/workflows/openvidu-components-angular-E2E.yml
@@ -28,6 +28,8 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: '16'
+    - name: Commit URL
+      run: echo https://github.com/OpenVidu/openvidu/commit/${{ github.event.inputs.commit_sha || github.sha }}
     - name: Send repository dispatch event
       env:
         GITHUB_TOKEN: ${{ secrets.OPENVIDU_DISPATCH_EVENT_GA }}
