openvidu-pro: Fix some Elasticsearch and Kibana config inconsistencies. - 1. `ELASTICSEARCH_PASSWORD` must be greater than 6 characters - 2. Port 443 and 80 is no longer needed to be specified when defining `OPENVIDU_PRO_ELASTICSEARCH_HOST`   and `OPENVIDU_PRO_KIBANA_HOST` - 3. OpenVidu Pro can run without Elasticsearch and Kibana by using `OPENVIDU_PRO_ELASTICSEARCH_ENABLED`

--- a/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
+++ b/openvidu-server/deployments/pro/docker-compose/openvidu-server-pro/.env
@@ -151,6 +151,9 @@ OPENVIDU_PRO_CLUSTER_LOAD_STRATEGY=streams
 # algorithm will be invoked for each user, in seconds
 # OPENVIDU_PRO_NETWORK_QUALITY_INTERVAL=5
 
+# If you want to use Elasticsearch and Kibana, this variable should be set to true.
+OPENVIDU_PRO_ELASTICSEARCH_ENABLED=true
+
 # Max days until delete indexes in state of rollover on Elasticsearch
 # Type number >= 0
 # Default Value is 7
