--- a/.github/workflows/openvidu-ce-test.yml
+++ b/.github/workflows/openvidu-ce-test.yml
@@ -41,10 +41,6 @@ on:
         description: "Version of Firefox to use. Must be a valid image tag from https://hub.docker.com/r/selenium/standalone-firefox/tags"
         required: true
         default: latest
-      # OPERA_VERSION:
-      #   description: 'Version of Opera to use. Must be a valid image tag from https://hub.docker.com/r/selenium/standalone-opera/tags'
-      #   required: true
-      #   default: latest
       EDGE_VERSION:
         description: "Version of Edge to use. Must be a valid image tag from https://hub.docker.com/r/selenium/standalone-opera/tags"
         required: true
@@ -58,16 +54,15 @@ jobs:
         - /var/run/docker.sock:/var/run/docker.sock
         - /opt/openvidu:/opt/openvidu
     env:
-      TEST_IMAGE: ${{ github.event.inputs.TEST_IMAGE }}
+      TEST_IMAGE: ${{ github.event.inputs.TEST_IMAGE || 'openvidu/openvidu-test-e2e:22.04' }}
       KURENTO_SNAPSHOTS_URL: ${{ secrets.KURENTO_SNAPSHOTS_URL }}
-      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE }}
-      MEDIASOUP_CONTROLLER_VERSION: ${{ github.event.inputs.MEDIASOUP_CONTROLLER_VERSION }}
-      KURENTO_JAVA_COMMIT: ${{ github.event.inputs.KURENTO_JAVA_COMMIT }}
-      DOCKER_RECORDING_VERSION: ${{ github.event.inputs.DOCKER_RECORDING_VERSION }}
-      CHROME_VERSION: ${{ github.event.inputs.CHROME_VERSION }}
-      FIREFOX_VERSION: ${{ github.event.inputs.FIREFOX_VERSION }}
-      OPERA_VERSION: ${{ github.event.inputs.OPERA_VERSION }}
-      EDGE_VERSION: ${{ github.event.inputs.EDGE_VERSION }}
+      KURENTO_MEDIA_SERVER_IMAGE: ${{ github.event.inputs.KURENTO_MEDIA_SERVER_IMAGE || 'kurento/kurento-media-server:6.18.0' }}
+      MEDIASOUP_CONTROLLER_VERSION: ${{ github.event.inputs.MEDIASOUP_CONTROLLER_VERSION || 'master' }}
+      KURENTO_JAVA_COMMIT: ${{ github.event.inputs.KURENTO_JAVA_COMMIT || 'default' }}
+      DOCKER_RECORDING_VERSION: ${{ github.event.inputs.DOCKER_RECORDING_VERSION || 'default' }}
+      CHROME_VERSION: ${{ github.event.inputs.CHROME_VERSION || 'latest' }}
+      FIREFOX_VERSION: ${{ github.event.inputs.FIREFOX_VERSION || 'latest' }}
+      EDGE_VERSION: ${{ github.event.inputs.EDGE_VERSION || 'latest' }}
     steps:
       - uses: actions/checkout@v3
       - name: Download commons.sh script
