--- a/openvidu-server/docker/openvidu-server-pro/Dockerfile
+++ b/openvidu-server/docker/openvidu-server-pro/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN mkdir -p /opt/openvidu /usr/local/bin/
 
-COPY openvidu-server.jar /opt/openvidu/openvidu-server.jar
+COPY openvidu-server-pro-*.jar /opt/openvidu/openvidu-server.jar
 COPY ./entrypoint.sh /usr/local/bin
 COPY ./discover_my_public_ip.sh /usr/local/bin
 COPY ./coturn-shared-key.template /usr/local
