--- a/openvidu-java-client/pom.xml
+++ b/openvidu-java-client/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<artifactId>openvidu-java-client</artifactId>
-	<version>2.26.0-beta1</version>
+	<version>2.26.0</version>
 	<packaging>jar</packaging>
 
 	<name>OpenVidu Java Client</name>
